# NeuralNetworks_Package

./: README.md
CompileTestNeuralNet/: CMakeLists.txt
NeuralNet_src/Networks/: MLP_Network.cpp  MLP_Network.h
NeuralNet_src/Networks/Test/: Test_MLP_Network.h
NeuralNet_src/Neurons/: HeavySidePerceptron.cpp  HeavySidePerceptron.h  HyperbolicTangentPerceptron.cpp  HyperbolicTangentPerceptron.h  LinearPerceptron.cpp  LinearPerceptron.h  Perceptron.cpp  Perceptron.h  RectifiedLinearPerceptron.cpp  RectifiedLinearPerceptron.h  SHLPerceptron.cpp  SHLPerceptron.h  SigmoidalPerceptron.cpp  SigmoidalPerceptron.h  SymmetricLinearPerceptron.cpp  SymmetricLinearPerceptron.h
NeuralNet_src/Neurons/Test/: Test_HeavySidePerceptron.h  Test_HyperbolicTangentPerceptron.h  Test_LinearPerceptron.h  Test_Perceptron.h  Test_RectifiedLinearPerceptron.h  Test_SHLPerceptron.h  Test_SigmoidalPerceptron.h  Test_SymmetricLinearPerceptron.h
NeuralNet_src/TrainningAlgorithms/: BackPropagation.cpp  BackPropagation.h  DescendingGradient.cpp  DescendingGradient.h  TrainingAlgorithmsModel.cpp  TrainingAlgorithmsModel.h
NeuralNet_src/TrainningAlgorithms/ErrorFunctions/: ErrorFunctions_Model.h  GeneralizedError.cpp  GeneralizedError.h  SumSquaresMean.cpp  SumSquaresMean.h
NeuralNet_src/TrainningAlgorithms/ErrorFunctions/Test/: Test_GeneralizedError.h  Test_SumSquaresMean.h
NeuralNet_src/TrainningAlgorithms/Test/: Test_BackPropagation.h  Test_DescendingGradient.h  Test_TrainingAlgorithmsModel.h
TestNeuralNetPackage/: Test_NeuralNetPackage.cpp  UnitTestPackage.cpp  UnitTestPackage.h
